tools/tests/ui/fail/l1009.cnf
// Test file for error code: L1009
// Expected error: Invalid Duplicate character in instruction sequence -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-invalid".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
